slight refactors